--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,7 +23,7 @@
 <div id="subheader">
 	<div class="pagewidth">
 		<div id="subheader_main">
-		        <% if @content_for_breadcrumbs || @instance %>
+		        <% if @content_for_breadcrumbs && @instance %>
 				<div id="breadcrumbs">
 					<%= yield :breadcrumbs or link_to(@instance.long_name.capitalize, overview_url)%>
 				</div>
