--- a/app/views/updates/show.html.erb
+++ b/app/views/updates/show.html.erb
@@ -23,7 +23,7 @@
 			<span class="comment-body"><%=simple_link_format c.body%></span>
 			<% if (@current_user.id == c.user.id) || (can? :destroy => c) %>
 			    <span class="comment-destroy">
-			        [<%=link_to 'X', [@incident, @update, c], :method => :delete, :confirm => 'Really delete?' %>]
+			        [<%=link_to 'x', [@incident, @update, c], :method => :delete, :confirm => 'Really delete?' %>]
 			    </span>
 			<% end %>
 			<span class="comment-date">posted <%=time_ago_in_words c.created_at%> ago</span>
