--- a/app/views/instances/new.html.erb
+++ b/app/views/instances/new.html.erb
@@ -11,8 +11,11 @@
 
 <% content_for :body do %>
 <%= flashes %>
-
-	<h1>Create an instance</h1>
+	<% if Admin.current %>
+		<%=pretty_button :log_out, "admin_logout", "Log Out Admin" -%>
+		<%= link_to 'Aministration', instances_path %> &raquo; Edit Instance <br>
+	<% end %>
+	<h2>Create an instance</h2>
 
 	<%= error_messages_for :instance %>
 
